Folder and file structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="row">
-      <h1 class="col-md-6 col-md-offset-3 text-center">Capture</h1>
+      <h1 class="col-md-6 col-md-offset-3 header">Capture</h1>
+      <h2 class="col-md-6 col-md-offset-3 header header__lower">The repository to allow you to GTD</h2>
     </div>
     <div class="row">
       <form class="col-md-6 col-md-offset-3">
