--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Capture</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="public/stylesheets/custom.css">
+    <link rel="stylesheet" href="assets/css/app.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
