Added test for adding an item to the list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row">
       <form class="col-md-6 col-md-offset-3">
         <input id="task" type="text" placeholder="I need to ...">
-        <button class="button__submit btn btn-primary">Submit</button>
+        <button class="form__button--submit btn btn-primary">Submit</button>
       </form>
     </div>
     <div class="row">
