Unit tests for capture task contoller added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app="capture">
+<html ng-app="Capture">
   <head>
     <title>Capture</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
