--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/app.module.js"></script>
   </head>
-  <body>
+  <body ng-controller="CaptureTasksController as taskCtrl">
     <div class="row">
       <h1 class="col-md-6 col-md-offset-3 header">Capture</h1>
       <h2 class="col-md-6 col-md-offset-3 header header__lower">The repository to allow you to GTD</h2>
     </div>
     <div class="row">
       <form class="col-md-6 col-md-offset-3">
-        <input id="task" type="text" placeholder="I need to ...">
+        <input id="task" type="text" placeholder="I need to ..." ng-model="taskCtrl.loadTask">
         <button class="form__button--submit btn btn-primary">Submit</button>
       </form>
     </div>
