--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row" >
       <ul class="col-md-6 col-md-offset-3 text-center list-unstyled" >
         <li ng-repeat="task in taskCtrl.tasks">
-          <p>{{task.desc}}</p>
+          <p class="tasks">{{task.desc}}</p>
         </li>
       </ul>
     </div>
