--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div class="row" >
       <ul class="col-md-6 col-md-offset-3 text-center list-unstyled" >
         <li ng-repeat="task in taskCtrl.tasks">
-          <p class="tasks">{{task.desc}}</p>
+          <p class="tasks"
+             ng-class="{'strikethrough': task.completed === true}"
+             ng-click="taskCtrl.complete($index)">{{task.desc}}</p>
         </li>
       </ul>
     </div>
