--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
         <button class="form__button--submit btn btn-primary" ng-click="taskCtrl.addTask(taskCtrl.loadTask)">Submit</button>
       </form>
     </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <button class="form__button--all" ng-click="taskCtrl.filterAll()">All</button>
+        <button class="form__button--active" ng-click="taskCtrl.filterActive()">Active</button>
+        <button class="form__button--complete" ng-click="taskCtrl.filterComplete()">Complete</button>
+      </div>
+    </div>
     <div class="row" >
       <ul class="col-md-6 col-md-offset-3 text-center list-unstyled" >
-        <li ng-repeat="task in taskCtrl.tasks">
+        <li ng-repeat="task in taskCtrl.tasks | filter:taskCtrl.taskFilter">
           <p class="tasks"
-             ng-class="{'strikethrough': task.completed === true}"
+             ng-class="{'strikethrough': task.completed}"
              ng-click="taskCtrl.complete($index)">{{task.desc}}</p>
         </li>
       </ul>
