--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@
       </form>
     </userinput>
     <filters class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <button class="filters__button filters__button--active btn btn-danger" ng-click="taskCtrl.filterActive()">Active</button>
-        <button class="filters__button filters__button--all btn btn-primary" ng-click="taskCtrl.filterAll()">All</button>
-        <button class="filters__button filters__button--complete btn btn-success" ng-click="taskCtrl.filterComplete()">Complete</button>
-      </div>
+      <buttons class="col-md-6 col-md-offset-3">
+        <div class="filters__button">
+          <button class="filters__button--active btn btn-danger" ng-click="taskCtrl.filterActive()">Active</button>
+          <button class="filters__button--all btn btn-primary" ng-click="taskCtrl.filterAll()">All</button>
+          <button class="filters__button--complete btn btn-success" ng-click="taskCtrl.filterComplete()">Complete</button>
+        </div>
+      </buttons>
     </filters>
+    <total class="row">
+      <p class="col-md-6 col-md-offset-3 total">{{(taskCtrl.tasks | filter:{'completed': false}).length}} Tasks Outstanding</p>
+    </total>
     <tasks class="row" >
       <ul class="col-md-6 col-md-offset-3 text-center list-unstyled" >
-        <li ng-repeat="task in taskCtrl.tasks | filter:taskCtrl.taskFilter">
+        <li ng-repeat="task in taskCtrl.tasks | filter:taskCtrl.taskFilter" class="list__item">
           <p class="tasks"
              ng-class="{'strikethrough': task.completed}"
              ng-click="taskCtrl.complete($index)">{{task.desc}}</p>
