--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="Capture">
   <head>
     <title>Capture</title>
+    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/app.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -10,17 +11,21 @@
     <script src="app/app.module.js"></script>
     <script src="app/components/captureTasksController.js"></script>
   </head>
+
   <body ng-controller="CaptureTasksController as taskCtrl">
+
     <header class="row">
       <h1 class="col-md-6 col-md-offset-3 header">Capture</h1>
       <h2 class="col-md-6 col-md-offset-3 header header__lower">The repository to allow you to GTD</h2>
     </header>
+
     <userinput class="row">
       <form class="col-md-6 col-md-offset-3">
-        <input id="task" type="text" placeholder="I need to ..." ng-model="taskCtrl.loadTask">
+        <input id="task" type="text" placeholder="Offload ..." ng-model="taskCtrl.loadTask">
         <button class="form__button--submit btn btn-primary" ng-click="taskCtrl.addTask(taskCtrl.loadTask)">Submit</button>
       </form>
     </userinput>
+
     <filters class="row">
       <buttons class="col-md-6 col-md-offset-3">
         <div class="filters__button">
@@ -30,9 +35,12 @@
         </div>
       </buttons>
     </filters>
+
     <total class="row">
-      <p class="col-md-6 col-md-offset-3 total">{{(taskCtrl.tasks | filter:{'completed': false}).length}} Tasks Outstanding</p>
+      <p class="col-md-6 col-md-offset-3 total">{{(taskCtrl.tasks | filter:{'completed': false}).length}} Tasks Outstanding - Click to Complete</p>
+      </text>
     </total>
+
     <tasks class="row" >
       <ul class="col-md-6 col-md-offset-3 text-center list-unstyled" >
         <li ng-repeat="task in taskCtrl.tasks | filter:taskCtrl.taskFilter" class="list__item">
@@ -42,5 +50,6 @@
         </li>
       </ul>
     </tasks>
+
   </body>
 </html>
